--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+pymongo
+djangorestframework-jwt
+cython
 beautifulsoup4==4.6.0
 certifi==2017.11.5
 chardet==3.0.4
@@ -28,7 +31,7 @@ pycodestyle==2.3.1
 pyflakes==1.6.0
 pytz==2018.3
 requests==2.18.4
-scipy==0.19.1
+#scipy==0.19.1
 six==1.11.0
 spotipy==2.4.4
 stevedore==1.21.0
@@ -36,7 +39,8 @@ titlecase==0.12.0
 unicode-slugify==0.1.3
 Unidecode==1.0.22
 urllib3==1.22
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
-youtube-dl==2017.12.31
+gunicorn
+#virtualenv==15.1.0
+#virtualenv-clone==0.2.6
+#virtualenvwrapper==4.7.2
+#youtube-dl==2017.12.31
